--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "exceljs": "^4.4.0",
     "express": "^4.21.0",
+    "express-session": "^1.18.0",
     "sqlite3": "^5.1.7"
   }
 }
