--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "exceljs": "^4.4.0",
-    "express": "^4.21.0",
-    "express-session": "^1.18.0",
+    "express": "^4.21.1",
+    "express-session": "^1.18.1",
+    "sequelize": "^6.37.4",
     "sqlite3": "^5.1.7"
   }
 }
