--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "exceljs": "^4.4.0",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
+    "mysql": "^2.18.1",
+    "node-cron": "^3.0.3",
+    "pdfkit": "^0.15.1",
     "sequelize": "^6.37.4",
     "sqlite3": "^5.1.7"
   }
